--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,27 @@
                             <i class="bi bi-chat-dots"></i> Interações
                         </a>
                     </li>
+                    {% if user.perfil.is_vendedor %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'sales:minha_meta' %}">
+                            <i class="bi bi-bullseye"></i> Minha Meta
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if user.perfil.is_gestor or user.perfil.is_admin %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                            <i class="bi bi-graph-up"></i> Gestão
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'gestao:dashboard' %}">Dashboard</a></li>
+                            <li><a class="dropdown-item" href="{% url 'gestao:leads_por_vendedor' %}">Leads por Vendedor</a></li>
+                            <li><a class="dropdown-item" href="{% url 'gestao:pipeline_geral' %}">Pipeline Geral</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'sales:metas_por_vendedor' %}">Metas por Vendedor</a></li>
+                        </ul>
+                    </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
@@ -42,13 +63,14 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             {% if user.is_staff %}
-                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}"><i class="bi bi-gear"></i> Admin</a></li>
                             {% endif %}
+                            <li><a class="dropdown-item" href="{% url 'manual' %}" target="_blank"><i class="bi bi-book"></i> Manual</a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li>
                                 <form method="post" action="{% url 'accounts:logout' %}">
                                     {% csrf_token %}
-                                    <button type="submit" class="dropdown-item">Sair</button>
+                                    <button type="submit" class="dropdown-item"><i class="bi bi-box-arrow-right"></i> Sair</button>
                                 </form>
                             </li>
                         </ul>
